--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,12 +3,17 @@
 	"build": {
 		"dockerfile": "Dockerfile"
 	},
+	"features": {
+		"ghcr.io/devcontainers/features/node:1": {
+			"version": "20"
+		}
+	},
 	"forwardPorts": [
 		8000,
 		3000
 	],
 	"postCreateCommand": "pip install -r backend/requirements.txt && cd frontend && npm install",
-	"postStartCommand": "uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload &",
+	"postStartCommand": "if [ -d \"$HOME/.antigravity-server/bin\" ]; then cd \"$HOME/.antigravity-server/bin\" && for dir in *-*; do hash=$(echo \"$dir\" | sed 's/^[^-]*-//'); [ ! -e \"$hash\" ] && ln -s \"$dir\" \"$hash\" 2>/dev/null; done; fi",
 	"customizations": {
 		"vscode": {
 			"extensions": [
